// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a div with class none if there are no saved tasks 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedTasks
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    user={
        Object {
            "savedTasks": Array [],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
>
          <FormattedMessage
                    defaultMessage="Tracked Tasks"
                    id="UserProfile.savedTasks.header"
                    values={Object {}}
          />
</h2>,
        <div
          className="none"
>
          No Tasks
</div>,
      ],
      "className": "saved-tasks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Tracked Tasks"
            id="UserProfile.savedTasks.header"
            values={Object {}}
/>,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Tracked Tasks",
            "id": "UserProfile.savedTasks.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No Tasks",
          "className": "none",
        },
        "ref": null,
        "rendered": "No Tasks",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
>
            <FormattedMessage
                        defaultMessage="Tracked Tasks"
                        id="UserProfile.savedTasks.header"
                        values={Object {}}
            />
</h2>,
          <div
            className="none"
>
            No Tasks
</div>,
        ],
        "className": "saved-tasks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Tracked Tasks"
              id="UserProfile.savedTasks.header"
              values={Object {}}
/>,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Tracked Tasks",
              "id": "UserProfile.savedTasks.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No Tasks",
            "className": "none",
          },
          "ref": null,
          "rendered": "No Tasks",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders a list of the saved tasks with links to each 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedTasks
    intl={
        Object {
            "formatMessage": [Function],
          }
    }
    user={
        Object {
            "savedTasks": Array [
              Object {
                "id": 123,
                "name": "First Task",
                "parent": Object {
                  "id": 321,
                  "name": "First Challenge",
                },
              },
              Object {
                "id": 456,
                "name": "Second Task",
                "parent": Object {
                  "id": 654,
                  "name": "Second Challenge",
                },
              },
              Object {
                "id": 789,
                "name": "Third Task",
                "parent": Object {
                  "id": 987,
                  "name": "Third Challenge",
                },
              },
            ],
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
>
          <FormattedMessage
                    defaultMessage="Tracked Tasks"
                    id="UserProfile.savedTasks.header"
                    values={Object {}}
          />
</h2>,
        <ul>
          <li
                    className="columns saved-tasks__task"
          >
                    <Link
                              replace={false}
                              to="/challenge/321/task/123"
                    >
                              <span
                                        className="saved-tasks__task__name"
                              >
                                        First Task
                              </span>
                               — 
                              First Challenge
                    </Link>
                    <span
                              className="connector"
                    />
                    <a
                              className="button is-clear"
                              onClick={[Function]}
                              title={undefined}
                    >
                              <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                              />
                    </a>
          </li>
          <li
                    className="columns saved-tasks__task"
          >
                    <Link
                              replace={false}
                              to="/challenge/654/task/456"
                    >
                              <span
                                        className="saved-tasks__task__name"
                              >
                                        Second Task
                              </span>
                               — 
                              Second Challenge
                    </Link>
                    <span
                              className="connector"
                    />
                    <a
                              className="button is-clear"
                              onClick={[Function]}
                              title={undefined}
                    >
                              <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                              />
                    </a>
          </li>
          <li
                    className="columns saved-tasks__task"
          >
                    <Link
                              replace={false}
                              to="/challenge/987/task/789"
                    >
                              <span
                                        className="saved-tasks__task__name"
                              >
                                        Third Task
                              </span>
                               — 
                              Third Challenge
                    </Link>
                    <span
                              className="connector"
                    />
                    <a
                              className="button is-clear"
                              onClick={[Function]}
                              title={undefined}
                    >
                              <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                              />
                    </a>
          </li>
</ul>,
      ],
      "className": "saved-tasks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Tracked Tasks"
            id="UserProfile.savedTasks.header"
            values={Object {}}
/>,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Tracked Tasks",
            "id": "UserProfile.savedTasks.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="columns saved-tasks__task"
>
              <Link
                            replace={false}
                            to="/challenge/321/task/123"
              >
                            <span
                                          className="saved-tasks__task__name"
                            >
                                          First Task
                            </span>
                             — 
                            First Challenge
              </Link>
              <span
                            className="connector"
              />
              <a
                            className="button is-clear"
                            onClick={[Function]}
                            title={undefined}
              >
                            <SvgSymbol
                                          className="icon"
                                          sym="trash-icon"
                                          viewBox="0 0 20 20"
                            />
              </a>
</li>,
            <li
              className="columns saved-tasks__task"
>
              <Link
                            replace={false}
                            to="/challenge/654/task/456"
              >
                            <span
                                          className="saved-tasks__task__name"
                            >
                                          Second Task
                            </span>
                             — 
                            Second Challenge
              </Link>
              <span
                            className="connector"
              />
              <a
                            className="button is-clear"
                            onClick={[Function]}
                            title={undefined}
              >
                            <SvgSymbol
                                          className="icon"
                                          sym="trash-icon"
                                          viewBox="0 0 20 20"
                            />
              </a>
</li>,
            <li
              className="columns saved-tasks__task"
>
              <Link
                            replace={false}
                            to="/challenge/987/task/789"
              >
                            <span
                                          className="saved-tasks__task__name"
                            >
                                          Third Task
                            </span>
                             — 
                            Third Challenge
              </Link>
              <span
                            className="connector"
              />
              <a
                            className="button is-clear"
                            onClick={[Function]}
                            title={undefined}
              >
                            <SvgSymbol
                                          className="icon"
                                          sym="trash-icon"
                                          viewBox="0 0 20 20"
                            />
              </a>
</li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "123",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/challenge/321/task/123"
>
                  <span
                                    className="saved-tasks__task__name"
                  >
                                    First Task
                  </span>
                   — 
                  First Challenge
</Link>,
                <span
                  className="connector"
/>,
                <a
                  className="button is-clear"
                  onClick={[Function]}
                  title={undefined}
>
                  <SvgSymbol
                                    className="icon"
                                    sym="trash-icon"
                                    viewBox="0 0 20 20"
                  />
</a>,
              ],
              "className": "columns saved-tasks__task",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <span
                      className="saved-tasks__task__name"
>
                      First Task
</span>,
                    " — ",
                    "First Challenge",
                  ],
                  "replace": false,
                  "to": "/challenge/321/task/123",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "First Task",
                      "className": "saved-tasks__task__name",
                    },
                    "ref": null,
                    "rendered": "First Task",
                    "type": "span",
                  },
                  " — ",
                  "First Challenge",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "connector",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
/>,
                  "className": "button is-clear",
                  "onClick": [Function],
                  "title": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                    "sym": "trash-icon",
                    "viewBox": "0 0 20 20",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "a",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "456",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/challenge/654/task/456"
>
                  <span
                                    className="saved-tasks__task__name"
                  >
                                    Second Task
                  </span>
                   — 
                  Second Challenge
</Link>,
                <span
                  className="connector"
/>,
                <a
                  className="button is-clear"
                  onClick={[Function]}
                  title={undefined}
>
                  <SvgSymbol
                                    className="icon"
                                    sym="trash-icon"
                                    viewBox="0 0 20 20"
                  />
</a>,
              ],
              "className": "columns saved-tasks__task",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <span
                      className="saved-tasks__task__name"
>
                      Second Task
</span>,
                    " — ",
                    "Second Challenge",
                  ],
                  "replace": false,
                  "to": "/challenge/654/task/456",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Second Task",
                      "className": "saved-tasks__task__name",
                    },
                    "ref": null,
                    "rendered": "Second Task",
                    "type": "span",
                  },
                  " — ",
                  "Second Challenge",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "connector",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
/>,
                  "className": "button is-clear",
                  "onClick": [Function],
                  "title": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                    "sym": "trash-icon",
                    "viewBox": "0 0 20 20",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "a",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "789",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/challenge/987/task/789"
>
                  <span
                                    className="saved-tasks__task__name"
                  >
                                    Third Task
                  </span>
                   — 
                  Third Challenge
</Link>,
                <span
                  className="connector"
/>,
                <a
                  className="button is-clear"
                  onClick={[Function]}
                  title={undefined}
>
                  <SvgSymbol
                                    className="icon"
                                    sym="trash-icon"
                                    viewBox="0 0 20 20"
                  />
</a>,
              ],
              "className": "columns saved-tasks__task",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <span
                      className="saved-tasks__task__name"
>
                      Third Task
</span>,
                    " — ",
                    "Third Challenge",
                  ],
                  "replace": false,
                  "to": "/challenge/987/task/789",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Third Task",
                      "className": "saved-tasks__task__name",
                    },
                    "ref": null,
                    "rendered": "Third Task",
                    "type": "span",
                  },
                  " — ",
                  "Third Challenge",
                ],
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "connector",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
/>,
                  "className": "button is-clear",
                  "onClick": [Function],
                  "title": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                    "sym": "trash-icon",
                    "viewBox": "0 0 20 20",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "a",
              },
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
>
            <FormattedMessage
                        defaultMessage="Tracked Tasks"
                        id="UserProfile.savedTasks.header"
                        values={Object {}}
            />
</h2>,
          <ul>
            <li
                        className="columns saved-tasks__task"
            >
                        <Link
                                    replace={false}
                                    to="/challenge/321/task/123"
                        >
                                    <span
                                                className="saved-tasks__task__name"
                                    >
                                                First Task
                                    </span>
                                     — 
                                    First Challenge
                        </Link>
                        <span
                                    className="connector"
                        />
                        <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                        >
                                    <SvgSymbol
                                                className="icon"
                                                sym="trash-icon"
                                                viewBox="0 0 20 20"
                                    />
                        </a>
            </li>
            <li
                        className="columns saved-tasks__task"
            >
                        <Link
                                    replace={false}
                                    to="/challenge/654/task/456"
                        >
                                    <span
                                                className="saved-tasks__task__name"
                                    >
                                                Second Task
                                    </span>
                                     — 
                                    Second Challenge
                        </Link>
                        <span
                                    className="connector"
                        />
                        <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                        >
                                    <SvgSymbol
                                                className="icon"
                                                sym="trash-icon"
                                                viewBox="0 0 20 20"
                                    />
                        </a>
            </li>
            <li
                        className="columns saved-tasks__task"
            >
                        <Link
                                    replace={false}
                                    to="/challenge/987/task/789"
                        >
                                    <span
                                                className="saved-tasks__task__name"
                                    >
                                                Third Task
                                    </span>
                                     — 
                                    Third Challenge
                        </Link>
                        <span
                                    className="connector"
                        />
                        <a
                                    className="button is-clear"
                                    onClick={[Function]}
                                    title={undefined}
                        >
                                    <SvgSymbol
                                                className="icon"
                                                sym="trash-icon"
                                                viewBox="0 0 20 20"
                                    />
                        </a>
            </li>
</ul>,
        ],
        "className": "saved-tasks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Tracked Tasks"
              id="UserProfile.savedTasks.header"
              values={Object {}}
/>,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Tracked Tasks",
              "id": "UserProfile.savedTasks.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="columns saved-tasks__task"
>
                <Link
                                replace={false}
                                to="/challenge/321/task/123"
                >
                                <span
                                                className="saved-tasks__task__name"
                                >
                                                First Task
                                </span>
                                 — 
                                First Challenge
                </Link>
                <span
                                className="connector"
                />
                <a
                                className="button is-clear"
                                onClick={[Function]}
                                title={undefined}
                >
                                <SvgSymbol
                                                className="icon"
                                                sym="trash-icon"
                                                viewBox="0 0 20 20"
                                />
                </a>
</li>,
              <li
                className="columns saved-tasks__task"
>
                <Link
                                replace={false}
                                to="/challenge/654/task/456"
                >
                                <span
                                                className="saved-tasks__task__name"
                                >
                                                Second Task
                                </span>
                                 — 
                                Second Challenge
                </Link>
                <span
                                className="connector"
                />
                <a
                                className="button is-clear"
                                onClick={[Function]}
                                title={undefined}
                >
                                <SvgSymbol
                                                className="icon"
                                                sym="trash-icon"
                                                viewBox="0 0 20 20"
                                />
                </a>
</li>,
              <li
                className="columns saved-tasks__task"
>
                <Link
                                replace={false}
                                to="/challenge/987/task/789"
                >
                                <span
                                                className="saved-tasks__task__name"
                                >
                                                Third Task
                                </span>
                                 — 
                                Third Challenge
                </Link>
                <span
                                className="connector"
                />
                <a
                                className="button is-clear"
                                onClick={[Function]}
                                title={undefined}
                >
                                <SvgSymbol
                                                className="icon"
                                                sym="trash-icon"
                                                viewBox="0 0 20 20"
                                />
                </a>
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "123",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/challenge/321/task/123"
>
                    <span
                                        className="saved-tasks__task__name"
                    >
                                        First Task
                    </span>
                     — 
                    First Challenge
</Link>,
                  <span
                    className="connector"
/>,
                  <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                ],
                "className": "columns saved-tasks__task",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <span
                        className="saved-tasks__task__name"
>
                        First Task
</span>,
                      " — ",
                      "First Challenge",
                    ],
                    "replace": false,
                    "to": "/challenge/321/task/123",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "First Task",
                        "className": "saved-tasks__task__name",
                      },
                      "ref": null,
                      "rendered": "First Task",
                      "type": "span",
                    },
                    " — ",
                    "First Challenge",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "connector",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "456",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/challenge/654/task/456"
>
                    <span
                                        className="saved-tasks__task__name"
                    >
                                        Second Task
                    </span>
                     — 
                    Second Challenge
</Link>,
                  <span
                    className="connector"
/>,
                  <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                ],
                "className": "columns saved-tasks__task",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <span
                        className="saved-tasks__task__name"
>
                        Second Task
</span>,
                      " — ",
                      "Second Challenge",
                    ],
                    "replace": false,
                    "to": "/challenge/654/task/456",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Second Task",
                        "className": "saved-tasks__task__name",
                      },
                      "ref": null,
                      "rendered": "Second Task",
                      "type": "span",
                    },
                    " — ",
                    "Second Challenge",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "connector",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "789",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/challenge/987/task/789"
>
                    <span
                                        className="saved-tasks__task__name"
                    >
                                        Third Task
                    </span>
                     — 
                    Third Challenge
</Link>,
                  <span
                    className="connector"
/>,
                  <a
                    className="button is-clear"
                    onClick={[Function]}
                    title={undefined}
>
                    <SvgSymbol
                                        className="icon"
                                        sym="trash-icon"
                                        viewBox="0 0 20 20"
                    />
</a>,
                ],
                "className": "columns saved-tasks__task",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <span
                        className="saved-tasks__task__name"
>
                        Third Task
</span>,
                      " — ",
                      "Third Challenge",
                    ],
                    "replace": false,
                    "to": "/challenge/987/task/789",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Third Task",
                        "className": "saved-tasks__task__name",
                      },
                      "ref": null,
                      "rendered": "Third Task",
                      "type": "span",
                    },
                    " — ",
                    "Third Challenge",
                  ],
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "connector",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
/>,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
